simple-platform/web-index-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-index-service
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: web-index
